--- a/app/frontend/templates/giveaway.html
+++ b/app/frontend/templates/giveaway.html
@@ -101,6 +101,7 @@
                             </select>
                         </div>
                     </div>
+                    {% endif %}
 
                     <div class="row mb-4">
                         <label class="col-sm-3 col-form-label text-light fw-bold fs-6">2. Sélectionner les Posts</label>
@@ -112,7 +113,7 @@
                                     Sélectionner</button>
                             </div>
                             <div id="post-grid" class="post-grid custom-scrollbar">
-                                <div class="text-muted text-center p-4">En attente de la sélection de la page...</div>
+                                <div class="text-muted text-center p-4">En attente des publications...</div>
                             </div>
                         </div>
                     </div>
